--- a/package.json
+++ b/package.json
@@ -14,25 +14,26 @@
 	"devDependencies": {
 		"@floating-ui/dom": "^1.2.8",
 		"@playwright/test": "^1.28.1",
-		"@skeletonlabs/skeleton": "^1.6.2",
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.5.0",
-		"@tailwindcss/forms": "^0.5.3",
-		"@tailwindcss/typography": "^0.5.9",
-		"autoprefixer": "^10.4.14",
+		"@skeletonlabs/skeleton": "^2.3.0",
+		"@skeletonlabs/tw-plugin": "^0.2.2",
+		"@sveltejs/adapter-auto": "^2.1.0",
+		"@sveltejs/kit": "^1.27.0",
+		"@tailwindcss/forms": "^0.5.6",
+		"@tailwindcss/typography": "^0.5.10",
+		"autoprefixer": "^10.4.16",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.26.0",
 		"postcss": "^8.4.23",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
-		"svelte": "^3.54.0",
-		"tailwindcss": "^3.3.2",
-		"vite": "^4.3.0",
-		"vitest": "^0.25.3"
+		"svelte": "^3.59.2",
+		"tailwindcss": "^3.3.3",
+		"vite": "^4.5.0",
+		"vitest": "^0.25.8"
 	},
 	"type": "module",
 	"dependencies": {
-		"dotenv": "^16.0.3"
+		"dotenv": "^16.3.1"
 	}
 }
