--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write ."
 	},
-	"devDependencies": {
+	"dependencies": {
 		"@floating-ui/dom": "^1.5.3",
 		"@playwright/test": "^1.39.0",
 		"@skeletonlabs/skeleton": "^2.3.0",
@@ -30,11 +30,9 @@
 		"svelte": "^4.2.2",
 		"tailwindcss": "^3.3.3",
 		"vite": "^4.5.0",
-		"vitest": "^0.34.6"
-	},
-	"type": "module",
-	"dependencies": {
-		"@sveltejs/adapter-vercel": "^3.0.3",
+		"vitest": "^0.34.6",
+        "@sveltejs/adapter-vercel": "^3.0.3",
 		"dotenv": "^16.3.1"
-	}
+	},
+	"type": "module"
 }
